# todo-list

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO_list.sln
.github/workflows/: codacy.yml  codeql-analysis.yml  flawfinder.yml
TODO_list/: .gitignore  TODO_list.cpp  TODO_list.vcxproj  TODO_list.vcxproj.filters  other.h
TODO_list/coman_handler/: command_handle.cpp  command_handle.h
TODO_list/structure_TODO/: structure_TODO.cpp  structure_TODO.h
src/: main.cpp  utilities.h
src/command_handler/: command_handler.cpp  command_handler.h
src/console_table/: console_table.cpp  console_table.h
src/utilities/: utilities.h
